<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mohamed.hw4.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_header"
        android:id="@+id/welcome_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:id="@+id/exit_btn" />

    <Button
        android:text="@string/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/exit_btn"
        android:layout_toEndOf="@+id/exit_btn"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:id="@+id/start_btn"
        android:enabled="false" />

    <TextView
        android:text="@string/loading_trivia_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="139dp"
        android:id="@+id/loading_trivia_label" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loading_trivia_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/loading_progress_bar" />

    <TextView
        android:text="@string/trivia_ready_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trivia_ready_label"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/trivia_image"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trivia"
        android:id="@+id/trivia_image"
        android:visibility="gone"
        android:layout_below="@+id/welcome_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" />
</RelativeLayout>
