<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mohamed.hw4.TriviaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/LL1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_question_no"
            android:id="@+id/text_view_question_no"
            android:background="#7bd3e2"
            android:layout_marginRight="165dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_time_left"
            android:id="@+id/text_view_time_left"
            android:background="#7bd3e2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LL2"
        android:layout_below="@id/LL1"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/question_image"
            android:layout_marginTop="10dp"
            android:visibility="gone" />



        <TextView
            android:text="@string/no_image_label"
            android:layout_width="match_parent"
            android:id="@+id/no_image_label"
            android:layout_weight="3.44"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone"
            android:layout_height="100dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_load_progressbar" />



        <TextView
            android:text="@string/image_load_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_load_label"
            android:gravity="center_horizontal" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/LL2"
        android:id="@+id/LL3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/LL4"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_prev"
            android:text="@string/prev_btn"
            android:layout_marginRight="150dp"
            android:onClick="quitGame"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_next"
            android:text="@string/next"
            android:onClick="nextQuestion"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="274dp"
        android:id="@+id/question_scrollview"
        android:layout_height="125dp"
        android:layout_below="@+id/LL2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp">
    </ScrollView>


</RelativeLayout>
